--- a/less/navigation.less
+++ b/less/navigation.less
@@ -31,18 +31,20 @@ nav {
   }
   ul {
     .flexy(flex, row, null, space-around, center);
-    width: 35%;
+    width: 60%;
     li {
       color: #fff;
       font-size: 1.4rem;
       text-decoration: underline;
       cursor: pointer;
+      text-shadow: -3px 3px 3px #000;
     }
   }
 
   a {
     .link-reset(#fff);
     font-size: 1.6rem;
+    ext-shadow: -3px 3px 3px #000;
     @media @desktop {
       font-size: 1.4rem;
     }
